@@ -56,9 +56,9 @@ XS(ffi_pl_record_accessor_opaque_array)
   char *ptr1;
   void **ptr2;
   int i;
-  
+
   dVAR; dXSARGS;
-  
+
   if(items == 0)
     croak("This is a method, you must provide at least the object");
 
@@ -74,7 +74,13 @@ XS(ffi_pl_record_accessor_opaque_array)
   ptr1 = (char*) SvPV_nolen(self);
   ptr2 = (void**) &ptr1[member->offset];
 
-  if(items > 1)
+  if(items > 2)
+  {
+    i   = SvIV(ST(1));
+    arg = ST(2);
+    ptr2[i] = SvOK(arg) ?  INT2PTR(void*, SvIV(arg)) : NULL;
+  }
+  else if(items > 1)
   {
     arg = ST(1);
     if(SvROK(arg) && SvTYPE(SvRV(arg)) == SVt_PVAV)
@@ -95,13 +101,22 @@ XS(ffi_pl_record_accessor_opaque_array)
     }
     else
     {
+      i   = SvIV(ST(1));
+      if(ptr2[i] == NULL)
+      {
+        XSRETURN_EMPTY;
+      }
+      else
+      {
+        XSRETURN_IV(PTR2IV(ptr2[i]));
+      }
       warn("passing non array reference into ffi/platypus array argument type");
     }
   }
 
   if(GIMME_V == G_VOID)
     XSRETURN_EMPTY;
-    
+
   av = newAV();
   av_fill(av, member->count-1);
   for(i=0; i < member->count; i++)
