@@ -2,6 +2,8 @@ Revision history for {{$dist->name}}
 
 {{$NEXT}}
   - Added support for pointers to longdouble (in C "long double *") type
+  - Array members of records can now be accessed (set/get) by element
+  - Array members of records types are now documented (see FFI::Platypus::Record)
 
 0.25      2015-02-16 20:18:41 -0500
   - Probe for proper long double support instead of trusting ffi.h
